--- a/styles/inlogstyle.css
+++ b/styles/inlogstyle.css
@@ -92,7 +92,11 @@ input[type="password"],
 input[type="email"] {
     width: 100%;
     padding: 1em 0 1em 0;
-    margin-bottom: 1em;
+    margin-bottom: 1.3em;
+}
+
+form:nth-child(1) input[type="password"] {
+    margin-bottom: 0;
 }
 
 input[type="checkbox"] {
@@ -111,6 +115,7 @@ button {
     text-align: center;
     border-radius: 2px;
     border-width: 0.5px;
+    margin-top: 0.8em;
 }
 
 button:hover {
@@ -125,6 +130,12 @@ button:nth-child(2) {
 
 fieldset:nth-child(2) {
     border-top: 1px solid #f2f2f2;
+}
+
+form:nth-child(1) a {
+    font-family: segoe ui;
+    font-size: 1.2em;
+    color: #6d6f71;
 }
 
 form:nth-child(2) {
